--- a/Makefile.in
+++ b/Makefile.in
@@ -205,8 +205,7 @@ LIBOBJS1 = sqlite3.lo
 #
 LIBOBJ = $(LIBOBJS$(USE_AMALGAMATION))
 
-LIBCIPHER = @LIBCIPHER@
-LIBCRYPTION = @LIBCRYPTION@
+LIBPKE = @LIBPKE@
 
 # All of the source code files.
 #
@@ -594,7 +593,7 @@ EXTHDR += \
 #
 TESTPROGS = \
   testfixture$(TEXE) \
-  sqlite3$(TEXE) \
+  sommelier-db$(TEXE) \
   sqlite3_analyzer$(TEXE) \
   sqldiff$(TEXE) \
   dbhash$(TEXE) \
@@ -645,7 +644,7 @@ DBFUZZ_OPT =
 # This is the default Makefile target.  The objects listed here
 # are what get build when you type just "make" with no arguments.
 #
-all:	sqlite3.h libsqlite3.la sqlite3$(TEXE) $(HAVE_TCL:1=libtclsqlite3.la) $(LIBCRYPTION)
+all:	sqlite3.h libsommelier-db.la sommelier-db$(TEXE) $(HAVE_TCL:1=libtclsqlite3.la) $(LIBPKE)
 
 Makefile: $(TOP)/Makefile.in
 	./config.status
@@ -653,29 +652,25 @@ Makefile: $(TOP)/Makefile.in
 sqlite3.pc: $(TOP)/sqlite3.pc.in
 	./config.status
 
-libsqlite3.la:	$(LIBOBJ) $(LIBCIPHER)
-	$(LTLINK) -no-undefined -o $@ $(LIBOBJ) $(TLIBS) \
+libsommelier-db.la:	$(LIBOBJ) $(LIBPKE)
+	$(LTLINK) -no-undefined -o $@ $(LIBOBJ) $(LIBPKE) $(TLIBS) \
 		${ALLOWRELEASE} -rpath "$(libdir)" -version-info "8:6:8"
 
-libtclsqlite3.la:	tclsqlite.lo libsqlite3.la
+libtclsqlite3.la:	tclsqlite.lo libsommelier-db.la
 	$(LTLINK) -no-undefined -o $@ tclsqlite.lo \
-		libsqlite3.la @TCL_STUB_LIB_SPEC@ $(TLIBS) \
+		libsommelier-db.la @TCL_STUB_LIB_SPEC@ $(TLIBS) \
 		-rpath "$(TCLLIBDIR)" \
 		-version-info "8:6:8" \
 		-avoid-version
 
-$(LIBCIPHER):
-	rm -rf peks
-	cp -r $(PEKSDIR) peks
-	cd peks && $(CARGO) build --release
+$(LIBPKE):
+	rm -rf pke
+	cp -r $(PEKSDIR) pke
+	cd pke && $(CARGO) build --release
 
-libcryption.la:
-	make -C $(TOP)/src/cryption builddir=`pwd` CXX="$(CXX)" CFLAGS="$(CFLAGS)" \
-		libtool="`pwd`/$(LIBTOOL)" libdir=$(libdir)
-
-sqlite3$(TEXE):	shell.c sqlite3.c $(LIBCIPHER)
+sommelier-db$(TEXE):	shell.c sqlite3.c $(LIBPKE)
 	$(LTLINK) $(READLINE_FLAGS) $(SHELL_OPT) -o $@ \
-		shell.c sqlite3.c \
+		shell.c sqlite3.c $(LIBPKE) \
 		$(LIBREADLINE) $(TLIBS) -rpath "$(libdir)"
 
 sqldiff$(TEXE):	$(TOP)/tool/sqldiff.c sqlite3.lo sqlite3.h
@@ -1069,9 +1064,9 @@ tclsqlite-shell.lo:	$(TOP)/src/tclsqlite.c $(HDR)
 tclsqlite-stubs.lo:	$(TOP)/src/tclsqlite.c $(HDR)
 	$(LTCOMPILE) -DUSE_TCL_STUBS=1 -o $@ -c $(TOP)/src/tclsqlite.c
 
-tclsqlite3$(TEXE):	tclsqlite-shell.lo libsqlite3.la
+tclsommelier-db$(TEXE):	tclsqlite-shell.lo libsommelier-db.la
 	$(LTLINK) -o $@ tclsqlite-shell.lo \
-		 libsqlite3.la $(LIBTCL)
+		 libsommelier-db.la $(LIBTCL)
 
 # Rules to build opcodes.c and opcodes.h
 #
@@ -1238,7 +1233,7 @@ sqlite3rbu.lo:	$(TOP)/ext/rbu/sqlite3rbu.c $(HDR) $(EXTHDR)
 # Rules to build the 'testfixture' application.
 #
 # If using the amalgamation, use sqlite3.c directly to build the test
-# fixture.  Otherwise link against libsqlite3.la.  (This distinction is
+# fixture.  Otherwise link against libsommelier-db.la.  (This distinction is
 # necessary because the test fixture requires non-API symbols which are
 # hidden when the library is built via the amalgamation).
 #
@@ -1253,7 +1248,7 @@ TESTFIXTURE_FLAGS += -DSQLITE_ENABLE_DBPAGE_VTAB
 TESTFIXTURE_FLAGS += -DSQLITE_ENABLE_BYTECODE_VTAB
 TESTFIXTURE_FLAGS += -DSQLITE_CKSUMVFS_STATIC
 
-TESTFIXTURE_SRC0 = $(TESTSRC2) libsqlite3.la
+TESTFIXTURE_SRC0 = $(TESTSRC2) libsommelier-db.la
 TESTFIXTURE_SRC1 = sqlite3.c
 TESTFIXTURE_SRC = $(TESTSRC) $(TOP)/src/tclsqlite.c
 TESTFIXTURE_SRC += $(TESTFIXTURE_SRC$(USE_AMALGAMATION))
@@ -1415,8 +1410,8 @@ kvtest$(TEXE):	$(TOP)/test/kvtest.c sqlite3.c
 rbu$(EXE): $(TOP)/ext/rbu/rbu.c $(TOP)/ext/rbu/sqlite3rbu.c sqlite3.lo
 	$(LTLINK) -I. -o $@ $(TOP)/ext/rbu/rbu.c sqlite3.lo $(TLIBS)
 
-loadfts$(EXE): $(TOP)/tool/loadfts.c libsqlite3.la
-	$(LTLINK) $(TOP)/tool/loadfts.c libsqlite3.la -o $@ $(TLIBS)
+loadfts$(EXE): $(TOP)/tool/loadfts.c libsommelier-db.la
+	$(LTLINK) $(TOP)/tool/loadfts.c libsommelier-db.la -o $@ $(TLIBS)
 
 # This target will fail if the SQLite amalgamation contains any exported
 # symbols that do not begin with "sqlite3_". It is run as part of the
@@ -1463,14 +1458,13 @@ releasetest:
 
 # Standard install and cleanup targets
 #
-lib_install:	libsqlite3.la $(LIBPEKS) $(LIBCRYPTION)
+lib_install:	libsommelier-db.la $(LIBPEKS)
 	$(INSTALL) -d $(DESTDIR)$(libdir)
-	$(LTINSTALL) libsqlite3.la $(DESTDIR)$(libdir)
-	$(LTINSTALL) $(LIBCRYPTION) $(wildcard peks/target/release/librust_searchable_pke.*) $(DESTDIR)$(libdir)
+	$(LTINSTALL) libsommelier-db.la $(LIBPEKS) $(DESTDIR)$(libdir)
 
-install:	sqlite3$(TEXE) lib_install sqlite3.h sqlite3.pc ${HAVE_TCL:1=tcl_install}
+install:	sommelier-db$(TEXE) lib_install sqlite3.h sqlite3.pc ${HAVE_TCL:1=tcl_install}
 	$(INSTALL) -d $(DESTDIR)$(bindir)
-	$(LTINSTALL) sqlite3$(TEXE) $(DESTDIR)$(bindir)
+	$(LTINSTALL) sommelier-db$(TEXE) $(DESTDIR)$(bindir)
 	$(INSTALL) -d $(DESTDIR)$(includedir)
 	$(INSTALL) -m 0644 sqlite3.h $(DESTDIR)$(includedir)
 	$(INSTALL) -m 0644 $(TOP)/src/sqlite3ext.h $(DESTDIR)$(includedir)
@@ -1486,7 +1480,7 @@ tcl_install:	lib_install libtclsqlite3.la pkgIndex.tcl
 	$(INSTALL) -m 0644 pkgIndex.tcl $(DESTDIR)$(TCLLIBDIR)
 
 clean:
-	rm -f *.lo *.la *.o sqlite3$(TEXE) libsqlite3.la
+	rm -f *.lo *.la *.o sommelier-db$(TEXE) libsommelier-db.la
 	rm -f sqlite3.h opcodes.*
 	rm -rf .libs .deps
 	rm -f lemon$(BEXE) lempar.c parse.* sqlite*.tar.gz
@@ -1494,7 +1488,7 @@ clean:
 	rm -f mksourceid$(BEXE)
 	rm -f *.da *.bb *.bbg gmon.out
 	rm -rf tsrc .target_source
-	rm -f tclsqlite3$(TEXE)
+	rm -f tclsommelier-db$(TEXE)
 	rm -f testfixture$(TEXE) test.db
 	rm -f LogEst$(TEXE) fts3view$(TEXE) rollback-test$(TEXE) showdb$(TEXE)
 	rm -f showjournal$(TEXE) showstat4$(TEXE) showwal$(TEXE) speedtest1$(TEXE)
@@ -1514,7 +1508,7 @@ clean:
 	rm -f dbhash dbhash.exe
 	rm -f fts5.* fts5parse.*
 	rm -f threadtest5
-	rm -rf peks $(LIBCIPHER)
+	rm -rf pke
 
 distclean:	clean
 	rm -f sqlite_cfg.h config.log config.status libtool Makefile sqlite3.pc \
